--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
             <div class = "side-bar">
                 <div class = "color">
                     <p>Color Picker</p>
-                    <input class = "color-picker" type ="color">
+                    <input class = "color-picker" type ="color" id = color>
                 </div>
-                <p>Grid Size</p>
-                <input type = "range";>
+                <div class = "grid-size">
+                    <p>Grid Size: <span id = "grid-current-size">16 x 16</span></p>
+                    <input type = "range" id = "range" min='1' max='100' value = '16';>
+                    
+                </div>
                 <div class = "buttons">
-                    <button class = "rainbow-mode">Rainbow</button>
-                    <button class = "clear">Clear</button>
+                    <button class = "color-mode">Color Mode</button>
+                    <button class = "rainbow-mode">Rainbow Mode</button>
+                    <button class = "clear">Clear Canvas</button>
                 </div>
             </div>
 
