finished all functionality and logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class = "side-bar">
                 <div class = "color">
                     <p>Color Picker</p>
-                    <input class = "color-picker" type ="color" id = color>
+                    <input class = "color-picker" type ="color" id = color value = "#FE67B0">
                 </div>
                 <div class = "grid-size">
                     <p>Grid Size: <span id = "grid-current-size">16 x 16</span></p>
@@ -27,9 +27,9 @@
                     
                 </div>
                 <div class = "buttons">
-                    <button class = "color-mode">Color Mode</button>
-                    <button class = "rainbow-mode">Rainbow Mode</button>
-                    <button class = "clear">Clear Canvas</button>
+                    <button class = "color-mode" id = color-mode>Color Mode</button>
+                    <button class = "rainbow-mode" id = rainbow-mode>Rainbow Mode</button>
+                    <button class = "clear" id = 'clear'>Clear Canvas</button>
                 </div>
             </div>
 
